# fundamentos_comunicacao_digital

./: README.md  main.tex
atividade01/: .gitignore  README.md  main.tex
atividade01/core/: header.tex  metadata.tex
atividade01/subsections/: questao09.tex  questao10.tex  questao11.tex
atividade02/: main.py  pyproject.toml
atividade02/app/api/: main.py  routers.py  schemas.py
atividade02/app/core/: audio_services.py  config.py  emissor.py  receptor.py  recorder.py  teste.py  tradutor.py
atividade02/app/db/: db_manager.py  schema.sql
atividade02/app/ui/: main_ui.py
atividade02/app/ui/assets/: to-do.md
atividade02/app/ui/components/: api_cliente.py  botoes.py  widgets.py
atividade02/app/utils/: utils.py
atividade03/: __init__.py  funcoes.py  funcoes_primitivas.py  main.py  plotter.py
atividade04/: extra.py  main.tex  setup.tex
atividade04/core/: metadata.tex
atividade04/subsections/: atividade04.tex
core/: setup.tex
subsections/: questao01.tex  questao02.tex  questao03.tex  questao04.tex  questao05.tex  questao06.tex  questao07.tex  questao08.tex  questao10.tex  questao11.tex  questao12.tex
