[project]
name = "TradutorMorse"
version = "0.1.0"
description = "Sistema de tradução de código Morse para texto e áudio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "flet>=0.84.0",
    "flet-audio>=0.84.0",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "uvicorn>=0.44.0",
]
